# python_file_manager

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
pyfm/: FileButton.py  FlowLayout.py  fileMng.py  file_button.py  file_manage.py  file_mgn.py  pyfm.py  qrc_resources.py
src/: FileButton.py  file_mgn.py  gui.py  main.py  qrc_res.py  res.qrc
src/utils/: PicButton.py
test/: main_test.py
