[metadata]
name = pyfm
version = 0.0.1
author = Åukasz Wala
description = A very basic GUI file manager in Python
url = https://github.com/LVala/python_file_manager
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts = 
    pyfm = pyfm.pyfm:main

[options.packages.find]
exclude = 
    test*